--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "express": "^4.18.2",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
@@ -50,5 +49,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://nahyeonnnn.github.io/like_lion_summerthon_team1_test/"
+  "homepage": "https://nahyeonnnn.github.io/like_lion_summerthon_team1_test",
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
+  }
 }
